--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "chart.js": "^3.5.1",
     "react": "16.12.0",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
     "react-router-dom": "5.2.0",
